Villanova_Dev1/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACT_AccountID__c</fullName>
        <description>Record ID from ACT Database for Contact&apos;s Account</description>
        <label>ACT AccountID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_ContactID__c</fullName>
        <description>Contact ID from ACT Database</description>
        <label>ACT ContactID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Seq_Num__c</fullName>
        <label>Address Seq Num</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliated_Organization__c</fullName>
        <description>Event Registration Field</description>
        <label>Affiliated Organization</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event Registration fields</description>
        <label>I have no current affiliations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event Registration field</description>
        <label>My Family members have no affiliations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event Registration field</description>
        <label>I have a current affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation_Type__c</fullName>
        <label>Affiliation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Recipient of Grant/Research Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member of Speakers Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Stock/Shareholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency_Organization_Name__c</fullName>
        <label>Agency/Organization Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alumni_Year__c</fullName>
        <description>Event Registration field for parity</description>
        <label>Alumni Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_Enrolled_Worked__c</fullName>
        <description>Event Registration Field</description>
        <label>Applied, Enrolled, Worked</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_planning_on_staying_overnight__c</fullName>
        <label>Are you planning on staying overnight?</label>
        <picklist>
            <picklistValues>
                <fullName>-</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Radnor Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villanova Conference Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Hotel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_Gift_Officer__c</fullName>
        <label>Assigned Gift Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant_Comments__c</fullName>
        <label>Assistant Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Name__c</fullName>
        <label>Assistant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttendSelf__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event registration field for parity with Leads</description>
        <label>Yes I will attend:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AttendSpouse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event registration field for parity with Leads</description>
        <label>My spouse will attend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BES_VRM__Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BES_VRM__StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIO_EMBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BIO (EMBA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_ID__c</fullName>
        <description>Unique ID from Banner.</description>
        <externalId>true</externalId>
        <label>Banner ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_PIDM__c</fullName>
        <description>Physical Record ID for Banner</description>
        <externalId>true</externalId>
        <label>Banner PIDM</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CUST_ContactsTable1_125510ID__c</fullName>
        <label>CUST_ContactsTable1_125510ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caritas_Society__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Caritas Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Clarification_Explanation__c</fullName>
        <description>Event registration field</description>
        <label>Clarification/Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Class_Year__c</fullName>
        <description>Descriptive identifier for year.</description>
        <label>Class Year</label>
        <picklist>
            <picklistValues>
                <fullName>- Please Select Your Year -</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Freshman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophomore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Student</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_author_Degrees_Earned__c</fullName>
        <description>Event Registration Field</description>
        <label>Co-author Degrees Earned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Co_author_Email__c</fullName>
        <description>Event Registration Field</description>
        <label>Co-author Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Co_author_First_Name__c</fullName>
        <description>Event Registration Field</description>
        <label>Co-author First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_author_Institution__c</fullName>
        <label>Co-author Institution</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_author_Last_Name__c</fullName>
        <description>Event Registration Field</description>
        <label>Co-author Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Code_Pref__c</fullName>
        <label>College Code Preference</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Organization__c</fullName>
        <description>Event Registration field for parity.</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential_Indicator__c</fullName>
        <label>Confidential?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential_Notes__c</fullName>
        <description>Restricted information that should not be public.</description>
        <inlineHelpText>Information should be entered as :
        Date - Initials - Comments/notes</inlineHelpText>
        <label>Confidential Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Consent__c</fullName>
        <description>Event Registration Field</description>
        <inlineHelpText>By selecting &quot;I Agree&quot;, I agree that all the information entered on this form is accurate and I have not misrepresented personal, professional, or financial relationships that might have direct influence on the subject matter of this CE program.</inlineHelpText>
        <label>Consent</label>
        <picklist>
            <picklistValues>
                <fullName>-- Please Select --</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>I Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Event Registration field</description>
        <label>Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Added_Real_Estate__c</fullName>
        <description>Date and time a contact was added to the real estate list.</description>
        <label>Date Added (Real Estate)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Degree_1_Institution__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 1 Institution</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_1_Major__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 1 Major</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_1_Year__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 1 Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_1__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 1</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_2_Institution__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 2 Institution</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_2_Major__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 2 Major</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_2_Year__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 2 Year</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_2__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_3_Institution__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 3 Institution</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_3_Major__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 3 Major</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_3_Year__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 3 Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_3__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree 3</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <label>Degree</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_s_Earned__c</fullName>
        <description>Event Registration Field</description>
        <label>Degree(s) Earned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directions_to_Service_Site__c</fullName>
        <label>Directions to Service Site</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_plan_on_attending_the_lunch__c</fullName>
        <description>Event registration Field for parity with Leads</description>
        <label>Do you plan on attending the lunch?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Donor_Code__c</fullName>
        <label>Donor Code</label>
        <picklist>
            <picklistValues>
                <fullName>ALUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LALM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAGZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LFAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LORG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LCRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOTH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drivers_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Driver License information has been received.</description>
        <label>Drivers License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMBA_ID_Status__c</fullName>
        <label>ID/Status</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student EMBA 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student EMBA 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student EMBA 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student EMBA 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student EMBA 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student EMBA 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student EMBA 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student EMBA 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student EMBA 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student EMBA 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Bounced_Date__c</fullName>
        <label>Email Bounced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Bounced_Reason__c</fullName>
        <label>Email Bounced Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Key__c</fullName>
        <label>Vertical Response Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience_Qualification__c</fullName>
        <description>Event Registration Field</description>
        <inlineHelpText>Briefly list your experiences that qualify you to present or plan this activity.</inlineHelpText>
        <label>Experience/Qualification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Rating_Score__c</fullName>
        <label>External Rating Score</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Rating_Service_Name__c</fullName>
        <label>External Rating Service Name</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Rating_Value__c</fullName>
        <label>External Rating Value</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Id__c</fullName>
        <label>Facebook Id</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Formal_Name__c</fullName>
        <description>Formal Name of the constituent</description>
        <label>Formal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Graduation_Name__c</fullName>
        <label>Graduation Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heritage_Society__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1842 Heritage Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Name__c</fullName>
        <label>Household Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobile/Transportation Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking/Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casino Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching/Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Real Estate Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense/Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-tech/Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Provider to Commercial Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit/Business Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal/Private Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceuticals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Rating_Level__c</fullName>
        <label>Internal Rating Level</label>
        <picklist>
            <picklistValues>
                <fullName>0 to 999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000 to 5000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Rating_Potential__c</fullName>
        <label>Internal Rating Potential</label>
        <picklist>
            <picklistValues>
                <fullName>Major Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation/Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Rating_Score__c</fullName>
        <label>Internal Rating Score</label>
        <picklist>
            <picklistValues>
                <fullName>DonorScape Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harris Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth Engine Rating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>C Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LYBUNT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact made a donation last year but not this year</inlineHelpText>
        <label>LYBUNT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Largest_Gift_Amount__c</fullName>
        <label>Largest Gift Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Largest_Gift_Date__c</fullName>
        <description>Date of Largest Gift</description>
        <label>Largest Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Largest_Gift_Dt__c</fullName>
        <label>Largest Gift Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Largest_Gift__c</fullName>
        <formula>if(ISNULL(Largest_Gift_Dt__c)==false,
&apos;$ &apos; + TEXT(Largest_Gift_Amount__c) + &apos; and &apos; + TEXT(MONTH(Largest_Gift_Dt__c)) + &apos;/&apos; + TEXT(DAY(Largest_Gift_Dt__c)) + &apos;/&apos; + TEXT(YEAR(Largest_Gift_Dt__c)),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Largest Gift</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Largest_Giving__c</fullName>
        <description>Largest Gift Amount</description>
        <label>Largest Giving</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Gift_Amount__c</fullName>
        <label>Last Gift Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Gift_Dt__c</fullName>
        <label>Last Gift Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Status_Check__c</fullName>
        <label>Last Status Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <label>Legacy Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LifeTime_Gift_Formula_c__c</fullName>
        <formula>if(ISNULL(LifeTime_Gift__c)==false,
&apos;$ &apos; + TEXT(LifeTime_Gift__c),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LifeTime Gift</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LifeTime_Gift__c</fullName>
        <label>LifeTime Gift</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>